fix(ui): CSS aligns for newsletter and icons

--- a/assets/css/async-blocks/content.css
+++ b/assets/css/async-blocks/content.css
@@ -140,7 +140,7 @@ figure figcaption {
     word-break: break-word;
     position: relative;
     font-size: var(--font-size-m);
-    padding: 10px;
+    padding: 10px 0px;
     text-shadow: var(--color-primary) 1px 0 10px;
     color: var(--color-gray);
     font-style: italic;
