--- a/assets/css/parts/front-page.css
+++ b/assets/css/parts/front-page.css
@@ -3,10 +3,6 @@
     margin-bottom: -70px;
 }
 
-#splash {
-    padding: 20px 0 40px 0;
-}
-
 h1 {
     text-align: center;
     font-style: italic;
@@ -21,9 +17,5 @@ h1 {
 
     .soyes-newsletter-columns figure.wp-block-image {
         margin-bottom: -80px;
-    }
-
-    #splash {
-        padding: 100px 0;
     }
 }
