--- a/assets/css/shortcodes/newsletter.css
+++ b/assets/css/shortcodes/newsletter.css
@@ -1,8 +1,7 @@
 .soyes-newsletter-container {
-    margin-top: 20px;
     text-align: center;
     background-color: var(--color-primary);
-    padding-top: 20px;
+    padding: 50px 0;
 }
 
 .soyes-newsletter-title {
